# compiler_in_rust

./: Cargo.toml
benches/: compile.rs
res/: TAC.txt  script.he
src/: lib.rs  main.rs
src/parser/: mod.rs
src/parser/expr/: mod.rs
src/parser/stmt/: mod.rs
src/parser/type/: mod.rs
src/semantic_analysis/: mod.rs
src/semantic_analysis/symbol_table/: mod.rs
src/tokenizer/: mod.rs
src/tokenizer/token/: mod.rs
