[package]
name = "compiler_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
regex = "1.9.5"
lazy_static = "1.4.0"
criterion = "0.5.1"

[[bench]]
name="compile"
harness=false
